# makerrepo-build123d-cookiecutter

./: .gitignore  Makefile  README.md  cookiecutter.json  pyproject.toml
{{ cookiecutter.project_slug }}/: README.md  pyproject.toml
{{ cookiecutter.project_slug }}/.makerrepo/: config.yaml
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.project_slug }}/: artifact_example.py  desk_organizer.py  generator_example.py  vented_enclosure.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/: __init__.py  desk_organizer.py  tutorial_bracket.py  vented_enclosure.py
