[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "Build123D CAD models for MakerRepo.com"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "build123d>=1.0",
    "makerrepo",
    "makerrepo-cli",
    "pydantic>=2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/{{ cookiecutter.project_slug }}"]
