[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "Build123D CAD models for MakerRepo.com"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "build123d>=0.11.0,<0.12",
    "makerrepo>=0.3.7,<0.4",
    "makerrepo-cli>=0.2.0,<0.3",
    "pydantic>=2.12.5,<3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["{{ cookiecutter.project_slug }}"]
